2008-12-23  Armin Burgmeier  <armin@arbur.net>

	* libinfgtk/inf-gtk-certificate-dialog.c
	(inf_gtk_certificate_dialog_init): Free the icon_info so that we don't
	leak it.

2008-12-23  Armin Burgmeier  <armin@arbur.net>

	* libinfgtk/inf-gtk-browser-view.c
	(inf_gtk_browser_view_progress_data_func): Free browser_iter to avoid
	a memory leak.

2008-12-23  Armin Burgmeier  <armin@arbur.net>

	* infinoted/note-plugins/text/infd-note-plugin-text.c: Renamed the
	InfdNotePlugin symbol to INFD_NOTE_PLUGIN_TEXT.

	* infinoted/note-plugins/text/Makefile.am: Build as not-installed
	library, instead of as a module.

	* infinoted/infinoted-note-plugin.c: Always load statically-linked
	text plugin.

	* infinoted/Makefile.am: Link against text plugin.

2008-12-22  Armin Burgmeier  <armin@arbur.net>

	* libinfinity/common/inf-io.c (inf_io_event_get_type): Null-terminate
	the list of flags values.

2008-12-21  Armin Burgmeier  <armin@arbur.net>

	* libinfgtk/inf-gtk-browser-view.c
	(inf_gtk_browser_view_row_changed_cb): Removed two unused variables.

	* libinftextgtk/inf-text-gtk-buffer.c
	(inf_text_gtk_buffer_buffer_init): Connect the get_modified and
	set_modified buffer implementations to the InfBufferIface.

	* libinftextgtk/inf-text-gtk-hue-chooser.c:
	(inf_text_gtk_hue_chooser_class_init): Install the dispose and
	finalize handlers.

	* infinoted/infinoted-creds.c
	(infinoted_creds_create_self_signed_certificate_impl): Removed an
	unused variable.

	* infinoted/infinoted-main.c (infinoted_main): Removed an unused
	variable.

2008-12-21  Armin Burgmeier  <armin@arbur.net>

	* libinfinity/common/inf-cert-util.c: Include inf-error.h to avoid a
	warning.

	* libinfinity/adopted/inf-adopted-request-log.c
	(inf_adopted_request_log_is_empty): Use g_return_val_if_reached
	instead of g_return_if_reached, to avoid a warning.
	(inf_adopted_request_log_add_request): Cast the log to GObject before
	calling g_object_notify_freeze, to avoid a warning.
